--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -176,8 +176,70 @@
       }
     }
   }
+
+  // ======= Client End ======= //
+
+  .clients_mobile {
+    display: none;
+    padding: 5rem;
+    .head {
+      padding-bottom: 4rem;
+      h1 {
+        font-family: "Poppins", sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 400;
+        color: #ffffff;
+        letter-spacing: 0;
+        text-align: center;
+      }
+    }
+    .body_layout {
+      .heads {
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr 0.5fr;
+        justify-items: center;
+        background-color: #000c66;
+        padding: 2rem 1rem;
+        column-gap: 2rem;
+
+        h1 {
+          font-size: 1.2rem;
+
+          color: #fff;
+        }
+      }
+      .body_info {
+        background-color: #fff;
+        .items {
+          display: grid;
+          grid-template-columns: 1fr 2fr 1fr 0.5fr;
+          justify-items: flex-start;
+          column-gap: 2rem;
+          padding: 2rem 1rem;
+          background-color: #ffffff;
+          img {
+            width: 100%;
+            height: 100px;
+          }
+          h1 {
+            font-size: 1.2rem;
+            line-height: 1.8rem;
+          }
+          ul {
+            li {
+              font-size: 0.9rem;
+              line-height: 1.5rem;
+            }
+          }
+        }
+        .items:nth-child(even) {
+          background-color: #262f753a;
+        }
+      }
+    }
+  }
 }
-// ======= Client End ======= //
 // ========================== Hero_wrap end ========================== //
 
 // ========================== Cloud_service Start ========================== //
@@ -207,6 +269,45 @@
           @include card_head;
         }
         .card-body {
+          ul {
+            @include card_list;
+          }
+        }
+      }
+    }
+  }
+}
+
+.cloud_service_solutions_mobile {
+  display: none;
+  padding: 3rem 5rem 5rem;
+  .head {
+    padding-bottom: 2rem;
+    h1 {
+      font-family: "Poppins", sans-serif;
+      margin-top: 0;
+      margin-bottom: 0;
+      font-weight: 400;
+      color: #ffffff;
+      letter-spacing: 0;
+      text-align: center;
+    }
+  }
+  .body_layout {
+    .iteams {
+      padding-top: 2rem;
+      .card {
+        height: 600px;
+        overflow: hidden;
+        border-radius: 0;
+        border: none;
+        box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+
+        .heads {
+          @include card_head;
+        }
+        .card-body {
+          overflow-y: scroll;
           ul {
             @include card_list;
           }
@@ -458,7 +559,7 @@
       padding: 10rem 0;
       .carousel-caption {
         padding: 2rem 0;
-        width: 100%;
+
         position: absolute;
         top: 39px;
         left: 16px;
@@ -558,6 +659,12 @@
 
     // ======= Client Start ======= //
     .clients {
+      display: none;
+    }
+    // ======= Client End ======= //
+
+    .clients_mobile {
+      display: block;
       padding: 2rem 0;
       .head {
         padding-bottom: 2rem;
@@ -567,7 +674,7 @@
       }
       .body_layout {
         .heads {
-          grid-template-columns: repeat(4, 1fr);
+          grid-template-columns: 1.2fr 1.5fr 1fr;
           column-gap: 0.5rem;
           padding: 0.5rem;
           text-align: center;
@@ -579,8 +686,8 @@
         .body_info {
           background-color: #fff;
           .items {
-            grid-template-columns: repeat(4, 1fr);
-            column-gap: 0.5rem;
+            grid-template-columns: 1fr 1.5fr 0.8fr;
+            column-gap: 0.8rem;
             padding: 0.5rem;
             height: 130px;
 
@@ -612,7 +719,6 @@
       }
     }
   }
-  // ======= Client End ======= //
   // ========================== Hero_wrap end ========================== //
 
   // ========================== Cloud_service Start ========================== //
@@ -659,6 +765,7 @@
       }
     }
   }
+
   // ========================== Cloud_service End ========================== //
   //  ========================== Data_service Start ========================== //
   .data_engineer_solution {
