--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ body {
   margin: 0;
   color: rgb(0, 0, 0);
   background-color: $primary-background-color;
+  scroll-behavior: smooth;
 }
 
 h1,
@@ -63,4 +64,74 @@ a {
 .data_engineer_solution .body_layout .owl-next {
   right: -68px;
   transform: translate(-50%, -50%);
+}
+
+.cloud_service_solutions_mobile .body_layout .owl-next,
+.cloud_service_solutions_mobile .body_layout .owl-prev {
+  background-color: rgba(70, 139, 204, 0.493) !important;
+  color: #222 !important;
+  height: 30px !important;
+  width: 30px !important;
+  border-radius: 50% !important;
+  position: absolute;
+  top: 50%;
+}
+
+.cloud_service_solutions_mobile .body_layout .owl-next:hover,
+.cloud_service_solutions_mobile .body_layout .owl-prev:hover {
+  background-color: rgb(70, 139, 204) !important;
+}
+.cloud_service_solutions_mobile .body_layout .owl-next i,
+.cloud_service_solutions_mobile .body_layout .owl-prev i {
+  font-size: 1rem !important;
+  font-weight: 600 !important;
+  color: $primary-color-white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.cloud_service_solutions_mobile .body_layout .owl-prev {
+  left: -8px;
+  transform: translate(-50%, -50%);
+}
+.cloud_service_solutions_mobile .body_layout .owl-next {
+  right: -38px;
+  transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 500px) {
+  .data_engineer_solution .body_layout .owl-next,
+  .data_engineer_solution .body_layout .owl-prev {
+    background-color: rgba(70, 139, 204, 0.493) !important;
+    color: #222 !important;
+    height: 30px !important;
+    width: 30px !important;
+    border-radius: 50% !important;
+    position: absolute;
+    top: 50%;
+  }
+
+  .data_engineer_solution .body_layout .owl-next:hover,
+  .data_engineer_solution .body_layout .owl-prev:hover {
+    background-color: rgb(70, 139, 204) !important;
+  }
+  .data_engineer_solution .body_layout .owl-next i,
+  .data_engineer_solution .body_layout .owl-prev i {
+    font-size: 1rem !important;
+    font-weight: 600 !important;
+    color: $primary-color-white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .data_engineer_solution .body_layout .owl-prev {
+    left: -8px;
+    transform: translate(-50%, -50%);
+  }
+  .data_engineer_solution .body_layout .owl-next {
+    right: -38px;
+    transform: translate(-50%, -50%);
+  }
 }
