--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@
 body {
   margin: 0;
   color: rgb(0, 0, 0);
-  background-color: $primary-background-color;
+  background-color: #fff;
   scroll-behavior: smooth;
 }
 
