--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -358,7 +358,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding: 5rem 0;
+    padding: 8rem 0 5rem;
     h1 {
       font-size: 3rem;
       font-weight: 800;
