--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,204 +1,349 @@
 @import "../../veriable.scss";
-@import "../../mixin.scss";
-nav {
-  // border-bottom: 3px solid $primary-text-color;
+@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap");
+
+header {
+  padding: 2rem 0;
+
   background-color: $primary-background-color;
-  position: relative;
-  z-index: 2;
-
-  .navbar-brand {
-    color: #fff;
-    padding: 0.2rem 1rem;
-    font-size: 1.8rem;
-  }
-  .navbar-toggler {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-    --bs-navbar-toggler-border-color: rgba(0, 0, 0, 0);
-    --bs-navbar-toggler-focus-width: 0;
-    --bs-navbar-toggler-icon-bg: none;
-    width: 1.5em;
-    height: 1.5em;
-    vertical-align: middle;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-  }
-  .collapse {
-    justify-content: flex-end;
-    background-color: transparent;
-    .navbar-nav {
-      .nav-item {
-        list-style: none;
-        display: inline;
-        padding: 1rem;
-        position: relative;
-        text-decoration: none;
-
-        .nav-link {
-          color: rgb(255, 255, 255);
-          font-size: 1.1rem;
-          font-weight: 500;
+  .decstop_nav {
+    .nav_bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .logo {
+        h1 {
+          color: $primary-color-white;
+          font-size: 2.1rem;
+          font-weight: 600;
+          font-family: "Kanit", sans-serif;
+          letter-spacing: 0.05px;
         }
+      }
+      .menu {
         ul {
-          background: $footer_color;
-          width: 200%;
-          position: absolute;
-          padding: 1rem 0;
           li {
-            display: block;
-            line-height: 1rem;
-            padding: 1rem;
+            display: inline-block;
+            padding: 0 1rem;
+            list-style: none;
             a {
-              color: #fff;
+              font-size: 1rem;
+              font-weight: 500;
+              letter-spacing: 0.5px;
+              text-transform: uppercase;
+              color: $primary-color-white;
             }
-            &:hover a {
-              color: #000;
+            ul {
+              visibility: hidden;
+              position: absolute;
+              background-color: #fff !important;
+              top: 4.8em;
+
+              li {
+                display: block;
+                padding: 1rem;
+                a {
+                  color: $primary-background-color;
+                  text-transform: capitalize;
+                  letter-spacing: 0;
+                  font-size: 1rem;
+                }
+              }
             }
-            &:hover {
-              background-color: #fff;
+            &:hover ul {
+              visibility: visible;
+              z-index: 2;
             }
           }
         }
       }
     }
   }
+  .mobile_nav {
+    display: none;
+  }
+}
+.toggle_menu {
+  display: none;
 }
 .header_change {
   position: fixed;
-  background-color: rgb(67, 72, 170);
+  background-color: $primary-background-color;
   width: 100%;
-  z-index: 3;
-  box-shadow: 3px 6px 36px -10px #000000b3;
-  top: -100px;
-  transform: translateY(100px);
-  transition: 0.6s ease-in-out;
+  z-index: 4;
+  padding: 2rem 0;
+  top: 0;
+  transform: translateY(0);
+  filter: drop-shadow(rgba(0, 8, 36, 0.05) 0px 4px 8px);
 }
-@media screen and (max-width: 991px) {
-  nav {
-    background-color: $footer_color;
-    // .navbar-toggler {
-    //   position: relative;
-    //   width: 50px;
-    //   height: 50px;
-    //   display: flex;
-    //   justify-content: center;
-    //   align-items: center;
-    //   overflow: hidden;
-
-    //   background-color: transparent;
-    //   &:focus {
-    //     border: 0;
-    //   }
-
-    //   & span {
-    //     position: absolute;
-    //     width: 20px;
-    //     height: 2.5px;
-    //     background-color: #ffffff;
-    //     border-radius: 4px;
-    //     right: 15px;
-
-    //     &:nth-child(1) {
-    //       transform: translateY(-8px);
-    //       width: 20px;
-    //       left: 15px;
-    //     }
-
-    //     &:nth-child(2) {
-    //       transform: translateY(8px);
-    //       width: 20px;
-    //       left: 15px;
-    //     }
-    //   }
-    // }
-    .collapse {
-      justify-content: flex-end;
-      background-color: transparent;
-      .navbar-nav {
-        .nav-item {
+.decstop_nav .header_change {
+  .nav_bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .logo {
+      h1 {
+        color: $primary-background-color;
+        font-size: 2.1rem;
+        font-weight: 600;
+        font-family: "Kanit", sans-serif;
+        letter-spacing: 0.05px;
+      }
+    }
+    .menu {
+      ul {
+        li {
+          display: inline-block;
+          padding: 0 1rem;
           list-style: none;
-          display: block;
-          padding: 0;
-          position: relative;
-          text-decoration: none;
-
-          .nav-link {
-            color: #fff;
-            font-size: 0.9rem;
+          a {
+            font-size: 1rem;
             font-weight: 500;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            color: #fff;
           }
           ul {
-            width: 100%;
-            position: unset;
-            margin-top: 0rem;
-            padding: 0.5rem 0;
+            visibility: hidden;
+            position: absolute;
+            background-color: #fff !important;
+            top: 4.8em;
+
             li {
               display: block;
-              line-height: 1rem;
-              padding: 0.5rem;
-
+              padding: 1rem;
               a {
-                color: #fff;
+                color: $primary-background-color;
+                text-transform: capitalize;
+                letter-spacing: 0;
+                font-size: 1rem;
               }
             }
+          }
+          &:hover ul {
+            visibility: visible;
+            z-index: 2;
           }
         }
       }
     }
   }
 }
-@media screen and (max-width: 424px) {
-  nav {
+@media screen and (max-width: 991px) {
+  header {
+    padding: 0;
+    z-index: 4;
     position: relative;
-    z-index: 2;
-
-    .navbar-brand {
-      color: #fff;
-      padding: 0.2rem 1rem;
-      font-size: 1.3rem;
-      font-weight: 900;
+    .decstop_nav {
+      display: none;
     }
+    .mobile_nav {
+      display: block;
+      padding: 1rem;
+      background-color: $primary-background-color;
 
-    .collapse {
-      justify-content: flex-end;
-      background-color: transparent;
+      .nav_bar {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        .logo {
+          h1 {
+            position: relative;
+            z-index: 4;
+            color: $primary-color-white;
+            font-size: 1.5rem;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+            font-family: "Kanit", sans-serif;
+          }
+        }
+
+        .toggle_button {
+          button {
+            position: relative;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+            border: none;
+            background-color: transparent;
+            display: block;
+            z-index: 4;
+
+            &.manuicons span {
+              transform: translateX(60px);
+            }
+
+            &.manuicons span:nth-child(1) {
+              transform: translateY(0px);
+              width: 20px;
+              transform: rotate(50deg);
+            }
+
+            &.manuicons span:nth-child(2) {
+              transform: translateY(0px);
+              width: 20px;
+              transform: rotate(128deg);
+            }
+
+            & span {
+              position: absolute;
+              width: 30px;
+              height: 2.5px;
+              background-color: $primary-color-white;
+              border-radius: 4px;
+              transition: 0.5s;
+              right: 15px;
+
+              &:nth-child(1) {
+                transform: translateY(-10px);
+                width: 20px;
+                left: 15px;
+              }
+
+              &:nth-child(2) {
+                transform: translateY(10px);
+                width: 20px;
+                left: 15px;
+              }
+            }
+          }
+          .menu-one {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+
+  .toggle_menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    content: "";
+    z-index: 3;
+    box-shadow: 1px 10px 11px 3px #00000017;
+    font-family: "Kanit", sans-serif;
+    background-color: #fff;
+    margin: 0;
+    transform: translate(110%);
+    padding-top: 6rem;
+    overflow: hidden;
+    overflow-y: scroll;
+    height: auto;
+    .menus {
+      background-color: #fff;
+      padding: 3rem 0;
       ul {
+        padding: 0;
+        .dropdown {
+          padding: 0;
+        }
         li {
-          list-style: none;
-          display: inline;
-          padding: 0.5rem;
-          position: relative;
-          text-decoration: none;
+          display: block;
 
+          text-align: center;
+          margin: 0rem 7rem;
+          padding: 0.5rem;
+
+          border-bottom: 1px solid #888;
           a {
-            color: #fff;
-            font-size: 1.1rem;
-            font-weight: 500;
+            font-size: 1rem;
+            font-weight: 900;
+            letter-spacing: 0rem;
+            font-family: "Kanit", sans-serif;
+
+            line-height: 2rem;
+            text-decoration: none;
+            color: $primary-background-color;
+
+            &.active {
+              color: #fff;
+            }
           }
           ul {
-            opacity: 0;
-            width: 200%;
-            position: absolute;
-            margin-top: 1rem;
-            padding: 1rem 0;
+            background-color: transparent;
+            border: none;
             li {
-              display: block;
-              line-height: 1rem;
-              padding: 1rem;
-              a {
-                color: #fff;
-                font-size: 0.8rem;
-              }
+              padding: 0;
+              background-color: #fff;
+              padding: 0 1rem;
+              border-radius: 5px;
             }
           }
         }
       }
-      ul li:hover > ul,
-      ul li ul:hover {
-        visibility: visible;
-        opacity: 1;
-        display: block;
+    }
+    .bottom {
+      padding-top: 3rem;
+    }
+    .add {
+      position: relative;
+      top: 0;
+      bottom: 0;
+      background-color: $primary-background-color;
+      height: auto;
+      color: #fff;
+      padding: 2rem 2rem 0;
+      text-align: center;
+      i {
+        font-size: 0.9rem;
+
+        padding-bottom: 1rem;
+      }
+      h1 {
+        font-size: 1rem;
+        font-weight: 600;
+        padding-bottom: 0.5rem;
+        font-family: "Kanit", sans-serif;
+      }
+      h6 {
+        padding-bottom: 2rem;
+        border-bottom: 1px solid #f3f0f040;
+        font-size: 0.8rem;
+        opacity: 0.5;
+        font-family: "Kanit", sans-serif;
+      }
+      p {
+        font-size: 0.8rem;
+        opacity: 0.5;
+        border-bottom: 1px solid #f3f0f040;
+        padding-bottom: 2rem;
+      }
+      ul {
+        li {
+          border: none;
+          display: inline;
+          padding: 0;
+          margin: 0 0.5rem;
+          background-color: transparent;
+          a {
+            color: #fff;
+            font-size: 0.8rem;
+            opacity: 0.5;
+          }
+        }
       }
     }
+  }
+  .active {
+    transform: translate(0%);
+    transition: 0.8s;
+  }
+  .header_change {
+    position: fixed;
+    background-color: $primary-background-color;
+    width: 100%;
+    z-index: 4;
+    padding: 1rem 0;
+    top: 0;
+    transform: translateY(0);
+    filter: drop-shadow(rgba(0, 8, 36, 0.05) 0px 4px 8px);
   }
 }
